.provarCaches/00Df2000001KKNJEA4/objects/INRF__Rule_Set__c.object
<CustomObject>
    <description>Set of Rule definitions for matching defined criteria and performing related actions.</description>
    <fields>
        <fullName>INRF__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If rule set is active  than use the rule define for this rule set, if rule set is not active do not use the rule in evaluation.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INRF__Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>INRF__Evaluation_Rule__c</fullName>
        <description>Evaluation Rule name to identify by name.</description>
        <label>Evaluation Rule</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Record is created</fullName>
                </value>
                <value>
                    <fullName>Record is edited</fullName>
                </value>
                <value>
                    <fullName>Record is created or edited</fullName>
                </value>
                <value>
                    <fullName>Record is created or edited and did not previously meet the rule criteria</fullName>
                </value>
                <value>
                    <fullName>On Click Event</fullName>
                    <isActive>false</isActive>
                    <label>On Click Event</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>INRF__Filter_Logic__c</fullName>
        <label>Filter Logic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Object__c</fullName>
        <description>This field will capture the sObject information, which will identify the on which sObject the evaluation will get fired.</description>
        <label>Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INRF__Related_Rule_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Rule Set</label>
        <referenceTo>INRF__Rule_Set__c</referenceTo>
        <relationshipLabel>Rule Sets</relationshipLabel>
        <relationshipName>Rule_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rule Set</label>
    <listViews>
        <fullName>INRF__All</fullName>
        <columns>NAME</columns>
        <columns>INRF__Object__c</columns>
        <columns>INRF__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>INRF__Case</fullName>
        <columns>NAME</columns>
        <columns>INRF__Active__c</columns>
        <columns>INRF__Evaluation_Rule__c</columns>
        <columns>INRF__Expiration_Date__c</columns>
        <columns>INRF__Effective_Date__c</columns>
        <columns>INRF__Filter_Logic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>INRF__Object__c</field>
            <operation>equals</operation>
            <value>Case</value>
        </filters>
        <label>Case</label>
    </listViews>
    <listViews>
        <fullName>INRF__My_RuleSet</fullName>
        <columns>NAME</columns>
        <columns>INRF__Object__c</columns>
        <columns>INRF__Order__c</columns>
        <columns>INRF__Active__c</columns>
        <filterScope>Mine</filterScope>
        <label>My RuleSet</label>
    </listViews>
    <listViews>
        <fullName>INRF__Opportunity</fullName>
        <columns>NAME</columns>
        <columns>INRF__Active__c</columns>
        <columns>INRF__Order__c</columns>
        <columns>INRF__Evaluation_Rule__c</columns>
        <columns>INRF__Effective_Date__c</columns>
        <columns>INRF__Expiration_Date__c</columns>
        <columns>INRF__Filter_Logic__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>INRF__Object__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>Opportunity</label>
    </listViews>
    <nameField>
        <label>Rule Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>